--- a/style.css
+++ b/style.css
@@ -1,9 +1,1 @@
-body {
-  background-image: url("hintergrund.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  font-family: Arial, sans-serif;
-  color: #222;
-  padding: 20px;
-}
+background-image: url("hintergrund.jpg.jpg");
